# gj

./: ACKNOWLEDGMENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  config-example.toml
defaults/: template.sh
spec/: abinit.json  adf.json  alamode.json  cp2k.json  cpmd.json  crystal.json  elk.json  gaussian16.json  hphi.json  lammps.json  mvmc.json  octopus.json  openmx.json  quantum-espresso.json  quantumatk.json  quantumespresso.json  rsdft.json  salmon.json  siesta.json  smash.json  tombo.json  vasp4.json  vasp5.json  vasp6.json  wannier90.json  wien2k.json
src/: arg.rs  args.rs  command.rs  config.rs  job.rs  lib.rs  main.rs  profile.rs  script.rs  spec.rs
templates/super/: adf.sh  alamode.sh  cp2k.sh  cpmd.sh  crystal.sh  elk.sh  gaussian16.sh  hphi.sh  lammps.sh  mvmc.sh  octopus.sh  quantumatk.sh  rsdft.sh  smash.sh  tombo.sh  vasp.sh  vasp5.sh  wannier90.sh  wien2k.sh
