[package]
name = "gj"
version = "0.1.0"
authors = ["Kota Nakano <kota.nakano.a8@tohoku.ac.jp>"]
description = "Job Script Generator for MASAMUNE-IMR"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tera= "1"
clap = { version = "4.4.11", features = ["derive"] }
anyhow = "1"
